Working with hero, need to apply corrections to navBar z-index

--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -1,10 +1,22 @@
 .hero {
+	padding-top: 55px;
 	width: 100%;
-	height: 100vh;
 	display: flex;
 	flex-direction: column;
 	align-content: flex-start;
 	justify-content: center;
+	&__container {
+		left: 30px;
+		position: absolute;
+		display: flex;
+		flex-direction: column;
+		align-content: flex-start;
+		justify-content: center;
+
+		& > *{
+			margin-top: 15px;
+		}
+	}
 	&__header {
 		width: 100%;
 		height: 100%;
@@ -16,16 +28,20 @@
 		font-size: 22px;
 	}
 	&__cta {
-		width: 100px;
 		height: 50px;
 		background: $background;
+		border: none;
+		font-size: 15px;
+		box-shadow: $box-shadow;
 	}
 	&__picture {
 		width: 100%;
 		height: 100%;
-	
 		& img {
-			object-fit: cover;
+			top: 0;
+			width: 100%;
+			height: 100%;
+			object-fit: scale-down;
 		}
 	}
 }
